tests/errors/surf_lex_06.ki
# LEXER: a \x escape whose digits are not hex characters
var s = "byte \xZZ"